--- a/css/main.css
+++ b/css/main.css
@@ -211,11 +211,8 @@ figure {
     height: 300px;
 }
 
-#bg-flowers{
-    background-image: url("../img/bg-mountains");
-    background-repeat: no-repeat;
-    height: 300px;
-    background-origin: content-box;
-    background-size: cover ;
+#bg-flowers {
+  background: url("../img/bg-mountains") no-repeat 0 0/cover content-box content-box;
+  height: 300px;
 }
 
